# embedded-term

./: Cargo.toml
examples/: pty.rs
src/: cell.rs  console.rs
